[package]
name = "bohemiancoin"
version = "0.1.0"
edition = "2021"
description = "Bohemiancoin – fixed-state ledger with 3D Cubic Seal PoW (v5 spec)"
license = "MIT"

[[bin]]
name = "bohemiancoin"
path = "src/main.rs"

[dependencies]
blake3   = "=1.5.1"
ring     = "=0.17.8"
rand     = "=0.8.5"
hex      = "=0.4.3"
colored  = "=2.1.0"
